syntax = "proto3";

package tag;
option go_package = "./tag";

message CreateTagRequest {
  string tag_name = 1;
  string tag_desc = 2;
}

message CreateTagReply {
  int64 id = 1;
}

message ListTagRequest {
  int64 cursor = 1;
  int64 limit = 2;
}

message Tag {
  int64 id = 1;
  string tag_name = 2;
  string tag_desc = 3;
  string create_time = 4;
}

message ListTagReply {
  repeated Tag tags = 1;
  bool has_more = 2;
}

message AddTagToResourceRequest {
  string biz_id = 1;
  int64 target_id = 2;
  int64 tag_id = 3;
  int64 user_id = 4;
}

message AddTagToResourceReply {}

message GetResourceTagsRequest {
  string biz_id = 1;
  int64 target_id = 2;
}

message GetResourceTagsReply {
  repeated Tag tags = 1;
}
message GetTagsRequest{
  string tag_ids=1;
}
message GetTagsResponse{
  repeated string tag_names=1;
}

service TagService {
  rpc CreateTag(CreateTagRequest) returns (CreateTagReply);
  rpc ListTag(ListTagRequest) returns (ListTagReply);
  rpc AddTagToResource(AddTagToResourceRequest) returns (AddTagToResourceReply);
  rpc GetResourceTags(GetResourceTagsRequest) returns (GetResourceTagsReply);
  rpc GetTags(GetTagsRequest)returns(GetTagsResponse);
}
